--- a/app/src/main/assets/webview1.html
+++ b/app/src/main/assets/webview1.html
@@ -11,15 +11,30 @@
         view1
     </div>
 
-    <button type="button">Click!</button>
+    <button type="button" onClick="clickA()">Click!</button>
 
-    <a href="https://www.naver.com/" target="_blank">외부 브라우저 띄우기</a>
+    <a href="https://www.naver.com/">외부 브라우저 띄우기</a>
+
+    <a href="#" onClick="externalClick(true, 'https://www.naver.com/')">외부 클릭!</a>
+    <a href="#" onClick="externalClick(false, 'https://www.naver.com/')">내부 클릭!</a>
+
     <a href="./webview2.html">내부 브라우저 이동하기</a>
     
     
     <script>
         function clickA(){
             Native.showMessage();
+        }
+
+        function onBackClick(){
+            Native.appClose();
+        }
+
+        function externalClick(bool, url){
+            //alert("out");
+            //Native.appClose();
+
+            Native.showOutBrowser(bool, url);
         }
     </script>
 </body>
