--- a/app/src/main/assets/webview2.html
+++ b/app/src/main/assets/webview2.html
@@ -13,7 +13,9 @@
     
     
     <script>
-
+        function onBackClick(){
+            window.history.back(-1);
+        }
     </script>
 </body>
 </html>
